# CENTplatform

./: README.md
CENTExtra/GameTutorial/: README.txt
CENTExtra/GameTutorial/Common/: Connect.cpp  GamePluginConf.pri  simpleshapedrawer.cpp  simpleshapedrawer.h
CENTExtra/IAF Calculator Python Standalone/: iafcalc.py
CENTPackage/GameTutorial/: README.txt
CENTPackage/GameTutorial/Common/: Connect.h
CENTPackage/GameTutorial/SimpleBallGamePlugin/: GameConfiguration.pri  SimpleBallGamePlugin.pro
CENTPackage/MappingTool/: README.txt
CENTSources/CENTSystemDocumentation/CENTSystemExtendedDocumentation/: CENTSystem.aux  CENTSystem.out
CENTSources/cent/: .gitmodules
CENTSources/cent/CENTSystem/: .gitignore  CENTSystem.pro
CENTSources/cent/Documentation/: SetupEnv.doc
CENTSources/cent_games/: GamePlugins.pro
CENTSources/cent_games/Common/: GLWidget.cpp  GLWidget.h  GamePluginConf.pri  simpleshapedrawer.cpp  simpleshapedrawer.h
CENTSources/cent_games/Config/: MediaGamePluginData.ini  SimpleBallGamePlugin.ini
CENTSources/cent_games/EmptyBallGamePlugin/: EmptyBallGamePlugin.pro
CENTSources/cent_games/GameCreationHOWTO/: GameConfiguration.pri  README.txt
CENTSources/cent_openvibe/AcquisitionServer/: CMakeLists.txt
CENTSources/cent_openvibe/AcquisitionServer/enobio/includes/: EnobioAPI_global.h
CENTSources/cent_openvibe/AcquisitionServer/enobio/libs/: EnobioAPI.lib
CENTSources/cent_openvibe/AcquisitionServer/enobio3g/includes/: PData.h
CENTSources/cent_openvibe/AcquisitionServer/src/: ovasCAcquisitionServer.cpp  ovasCAcquisitionServer.h  ovasCAcquisitionServerThread.h  ovasCCommandLineConfiguration.cpp  ovasCCommandLineConfiguration.h  ovasCHeader.cpp  ovasCHeader.h  ovasIDriver.h  ovasIHeader.h  ovas_base.h  ovas_defines.h  ovas_main.cpp
CENTSources/cent_openvibe/AcquisitionServer/src/enobio-3g-api-dll-driver/: ovasCDriverEnobio3GApiDll.cpp  ovasCDriverEnobio3GApiDll.h
CENTSources/cent_openvibe/AcquisitionServer/src/enobio-api-dll-driver/: ovasCDriverEnobioApiDll.cpp  ovasCDriverEnobioApiDll.h
CENTSources/cent_openvibe/AcquisitionServer/src/enobio-udp-driver/: ovasCDriverEnobioUDP.cpp  ovasCDriverEnobioUDP.h
CENTSources/cent_openvibe/AcquisitionServer/src/generic-oscilator/: ovasCDriverGenericOscilator.cpp  ovasCDriverGenericOscilator.h
CENTSystemDocumentation/CENTSystemExtendedDocumentation/: CENTSystem.tex  CENTSystem.toc
CENTSystemDocumentation/CENTSystemOriginalDocumentation/: Makefile  make.bat
Publication/: CENTplatform.aux  CENTplatform.bbl  CENTplatform.blg  CENTplatform.fdb_latexmk  CENTplatform.fls  CENTplatform.tex  CENTrefs.bib  Makefile  TODO.txt  clinical_trial.tex  clinical_trial_bib.bib  neurofeedback_software.sc  nfb_software_review.bib  nfb_software_review.tex  platform_arch.tex  signal_processing.bib  signal_processing.tex  software_ext.tex  wlpeerj.cls
(+532 files in other folders)
